fix: comment validation and empty spacing

--- a/src/css/comment-form.scss
+++ b/src/css/comment-form.scss
@@ -15,6 +15,9 @@
 
   .comments {
     &__list {
+      &.hide {
+        display: none;
+      }
       &-item {
         @include hide;
       }
